Name:               flite
Version:            0.4.0
Synopsis:           f-lite compiler, interpreter and libraries
License:            BSD3
License-file:       LICENSE
Author:             Matthew Naylor
Maintainer:         Jason Reich <jason@cs.york.ac.uk>, Matthew Naylor <mfn@cs.york.ac.uk>
Stability:          provisional
Homepage:           http://www.cs.york.ac.uk/fp/reduceron/
Build-Type:         Simple
Cabal-Version:      >=1.6
Description:        The f-lite language is a subset of Haskell 98 and Clean consisting of function
                    definitions, pattern matching, limited let expressions, function applications and
                    constructor applications expressed in the explicit 'braces' layout-insensitive format.
Category:           Compiler
Extra-Source-Files: README examples/*.hs

Library
    Build-Depends:   base >= 3 && < 5,
                     array >= 0 && < 1, containers >= 0 && < 1,
                     uniplate, parsec >= 2.1.0.1 && < 3
    Exposed-modules: Flite.CallGraph, Flite.Case, Flite.ConcatApp,
                     Flite.Descend, Flite.Fresh, Flite.Identify, Flite.Identity,
                     Flite.Inline, Flite.Let, Flite.Matching, Flite.Pretty,
                     Flite.Syntax, Flite.Traversals, Flite.Writer, Flite.Interp,
                     Flite.Projections
    Other-Modules:  Flite.Compile, Flite.CompileBackend,
                    Flite.CompileFrontend, Flite.Flatten, Flite.Flic,
                    Flite.InterpFrontend, Flite.LambdaLift, Flite.Predex, 
                    Flite.RedCompile, Flite.RedFrontend, Flite.RedSyntax,
                    Flite.State, Flite.Strictify, Flite.WriterState,
                    Flite.Dependency, Flite.IntInfer, Flite.Strictness, Flite.WorkerWrapper,
                    Flite.TypeUtils, Flite.Projections.NiceType, Flite.AutoPar, Flite.ContextStrat
